unpackaged/main/default/objects/pi__EngageCampaignRecipient__c/pi__EngageCampaignRecipient__c.object-meta.xml
<CustomObject>
    <label>Engage Campaign Recipient</label>
    <nameField>
        <label>Engage Campaign Recipient</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engage Campaign Recipients</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>