unpackaged/main/default/objects/pi__EngageCampaignRecipient__c/fields/pi__LeadId__c.field-meta.xml
<CustomField>
    <fullName>pi__LeadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead</relationshipLabel>
    <relationshipName>EngageCampaign_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>