unpackaged/main/default/objects/pi__EngageCampaignRecipient__c/fields/pi__Status__c.field-meta.xml
<CustomField>
    <fullName>pi__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>queued</fullName>
            </value>
            <value>
                <fullName>composing</fullName>
            </value>
            <value>
                <fullName>sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>