unpackaged/main/default/objects/pi__EngageCampaignRecipient__c/fields/pi__UserId__c.field-meta.xml
<CustomField>
    <fullName>pi__UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User</relationshipLabel>
    <relationshipName>EngageCampaign_User</relationshipName>
    <type>Lookup</type>
</CustomField>